# pymake

./: .gitignore  README.md  pyproject.toml
src/pymake/: __about__.py  __init__.py  cmds.py  interpolate_templates.py  main.py  publish_encode.py  templates.py  write_templates.py
tests/: test_runner.py  test_write_templates.py
