[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymake"
dynamic = ["version"]
description = 'A simple makefile replacement'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Rune Hansén Steinnes", email = "rune.steinnes@westum.no" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/roderik333/pymake#readme"
Issues = "https://github.com/roderik333/pymake/issues"
Source = "https://github.com/roderik333/pymake"

[project.scripts]
pymake = "pymake.main:cli"

[tool.hatch.version]
path = "src/pymake/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pymake tests}"

[tool.coverage.run]
source_pkgs = ["pymake", "tests"]
branch = true
parallel = true
omit = [
  "src/pymake/__about__.py",
]

[tool.coverage.paths]
pymake = ["src/pymake", "*/pymake/src/pymake"]
tests = ["tests", "*/pymake/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
